# IBPS

./: .editorconfig  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  Cargo.toml  Dockerfile  IA.md  README.md  TODO  bun.lockb  cargo.config.js  craco.config.js  docker-compose.yaml  docs.md  eslint.config.mjs  fly.toml  nginx.conf  package-lock.json  package.json  pyproject.toml  rsbuild.config.ts  rust-toolchain.toml  second.ibps  tailwind.config.js  test.ibps  tsconfig.json  vercel.json
.github/: FUNDING.yml
.yarn/releases/: yarn-4.1.0.cjs
archive/: .dockerignore  Dockerfile  docker-compose.yaml
examples/: gauge.ibps  long_loop.ibps
ibps-cli/: .gitignore  Cargo.toml  build.py  note.md  rust-toolchain.toml  rustpython.sh
ibps-cli/src/: main.rs  runpy.rs
ibps-comp/: Cargo.toml
ibps-comp/ibps-comp-runlocalpy/: Cargo.toml
ibps-comp/ibps-comp-runlocalpy/src/: lib.rs
ibps-comp/pkg/: ibpscomp.d.ts  ibpscomp.js  ibpscomp_bg.wasm  ibpscomp_bg.wasm.d.ts  package.json
ibps-comp/src/: bin.rs  compiler.rs  lib.rs
ibps-comp/src/compiler/: preprocess.rs  resolve_include.rs  stdlib.rs
ibps-comp/src/compiler/preprocess/: replace_ibps_tokens.rs
ibps-comp/stdlib/: Array.py
ibps-desktop/: .gitignore  Cargo.toml  build.py  build.sh  release.sh  tauri.conf.json
ibps-desktop/src/: new.rs  tauri.rs
ibps-ide/: index.tsx
ibps-ide/atoms/: atoms.ts
ibps-ide/components/: DesktopDragRegion.tsx  ErrorNotFound.tsx  IBPSProvider.tsx
ibps-ide/components/Ide/: Ide.tsx
ibps-ide/components/Ide/BottomBar/: BottomBar.tsx  ThemeSelector.tsx
ibps-ide/components/Ide/IBPSEditor/: IBPSEditor.tsx  IBPSEditorMonaco.tsx  Welcome.tsx
ibps-ide/components/Ide/IDEPanels/: ConsoleSectionTabs.tsx  IDEPanelTopbar.tsx  IDESearchBar.tsx
ibps-ide/components/Ide/global/: Ahref.tsx  ExamplePicker.tsx  FileIcon.tsx  FileName.tsx  FontSizeButton.tsx  RunButton.tsx
ibps-ide/components/Ide/interact/: Modal.tsx
ibps-ide/hooks/: useAceEditorTheme.ts  useDesktopDownloadURLs.ts  useDidClickInside.ts  useFiles.ts  useIbpscomp.ts  useIdeThemeCSSClasses.ts  useIsTauriMacOS.ts  usePreferredOrForcedColorScheme.ts  useTauriOS.ts  useVersion.ts
ibps-ide/lib/: IFiles.ts  codeCopyrightText.ts  exampleFiles.ts  fileExtension.ts  ideThemes.ts  jsonDiskUsageUtils.ts  resolveIbpsIncludes.ts  toValidFilename.ts  welcome.ts
ibps-ide/lib/ibpscompInterop/: ibpscomp.ts
ibps-ide/styles/: dark-themes.css  fonts.css  global.css  light-themes.css  markdown.css
ibps-vscode/: CHANGELOG.md  README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
ibps-vscode/snippets/: control-flow.code-snippets  keywords.code-snippets  methods.code-snippets
ibps-vscode/syntaxes/: ibps.tmLanguage.json
ibpscomp-rs/: Cargo.toml
ibpscomp-rs/pkg/: ibps.d.ts  ibps.js  ibps_bg.wasm  ibps_bg.wasm.d.ts  package.json
ibpscomp-rs/src/: bin.rs  lib.rs
ibpscomp-rs/src/compiler/: mod.rs  remove_comments.rs  replace_ibps_tokens.rs  stdlib.rs
ibpscomp-rs/src/run/: mod.rs
ibpscomp-rs/stdlib/: Array.py  ArrayList.py  Collection.py  Queue.py  Stack.py  String.py  stdlib.ibps
ibpscomp-rs/stdlib/python/: header.py  stdqueue.py  stdstack.py
public/: index.html  manifest.json  react-py-sw.js
public/examples/: +biggest_row.ibps  +factorial.ibps  +hanoi.ibps  +linear_search.ibps  +pyramid.ibps  +selection_sort.ibps  IGNORE_transpose.ibps  array.ibps  average.ibps  bubble_sort.ibps  collection.ibps  factorial.ibps  fibonacci.ibps  hanoi.ibps  io.ibps  loop.ibps  matrix.ibps  selection_sort.ibps  stack.ibps
public/stdlib/ibps/: stdlib.ibps  stdlibpy.ibps
public/stdlib/python/: stdarr.py  stdcoll.py
src/: App.tsx  IBPSProvider.tsx  index.tsx  service-worker.ts  serviceWorkerRegistration.1.ts  serviceWorkerRegistration.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/atoms/: atoms.ts
src/components/: DesktopDragRegion.tsx  ErrorNotFound.tsx  Example.tsx  IBPSProvider.tsx
src/components/IDE/: IDE.tsx
src/components/IDE/BottomBar/: BottomBar.tsx
src/components/Ide/: Ide.tsx
src/components/global/: DragRegion.tsx  ExamplePicker.tsx  FileIcon.tsx  FileName.tsx  FileSwitchBar.tsx  FontSizeButton.tsx  NotFound.tsx  RunButton.tsx  ThemeColorChangeProvider.tsx
src/hooks/: isTauriMac.ts  useFiles.ts  useIbpscomp.ts  useIsTauriMacOS.ts  useRunHandler.ts  useVersion.ts
src/lib/: IFiles.ts  OutputView.ts  codeCopyrightText.ts  defaultIbpsCode.ts  exampleFiles.ts  fileExtension.ts  jsonDiskUsageUtils.ts  printExternal.ts  resolveIbpsIncludes.ts  syntaxHighlighting.js  toValidFilename.ts  welcome.ts
src/lib/ibpscomp-rs/: ibpscomp.ts
src/styles/: fonts.css  global.css  markdown.css
src/types/: react-resize-panel.d.ts
tests/: test_control_flow.ibps
(+46 files in other folders)
