[package]
name = "ibps"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ibpscomp-rs = { path = "../ibpscomp-rs" }
rustpython = { path = "./RustPython/", features = ["freeze-stdlib", "stdlib"] }
rustpython-pylib = { path = "./RustPython/pylib/" }
