[package]
name = "ibps-cli"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["baris-inandi"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ibps-comp = { path = "../ibps-comp" }
rustpython = { version = "0.3.0", features = ["freeze-stdlib", "stdlib"] }
rustpython-pylib = "=0.3.0"
