[package]
name = "ibpscomp-rs"
version = "0.1.0"
edition = "2021"
build = "./src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ibps"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "ibpscomp-rs-bin"
path = "src/bin.rs"

[dependencies]
fancy-regex = "0.11.0"
regex = "1.10.0"
wasm-bindgen = "0.2.87"
