[package]
name = "ibpscomp-rs"
version = "0.2.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ibps"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "ibpscomp-rs-bin"
path = "src/bin.rs"

[dependencies]
fancy-regex = "0.13.0"
regex = "1.10.0"
wasm-bindgen = "0.2.87"

[profile.release]
lto = true
opt-level = "s"
strip = "debuginfo"
