[package]
name = "ibps-comp-runlocalpy"
authors = ["baris-inandi"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/baris-inandi/ibps"
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ibpscomp_runlocalpy"
crate-type = ["rlib"]
path = "src/lib.rs"
